# cookiecutter-oarepo-instance

./: LICENSE.md  README.md  cookiecutter.json
.github/workflows/: main.yml
hooks/: post_gen_project.sh
{{cookiecutter.project_shortname}}/: Dockerfile  LICENSE  compile_messages.sh  docker-services.yml  pyproject.toml  run_tests.sh
{{cookiecutter.project_shortname}}/.github/workflows/: main.yml
{{cookiecutter.project_shortname}}/scripts/: clear.py  setup.sh  test_rest.py  test_rest.sh
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/: cli.py  config.py
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/records/: config.py  constants.py  ext.py  fetchers.py  marshmallow.py  minters.py  permissions.py  record.py
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/records/jsonschemas/records/: record-v1.0.0.json
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/records/mappings/v7/: __init__.py
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/records/mappings/v7/records/: record-v1.0.0.json
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/records/mappings/v{{cookiecutter.elasticsearch}}/records/: record-v1.0.0.json
