[tool.poetry]
name = '{{ cookiecutter.project_shortname }}'
version = "1.0.0"
description = "CESNET repository for scientific publications and datasets"
authors = [
    '{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>'
]


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

oarepo = "^3.3"
oarepo-micro-api = ">=1.0.0"

oarepo-validate = ">=1.0.0"
oarepo-mapping-includes = ">=1.2.0"
oarepo-invenio-model = ">=2.1.2"
oarepo-dc = "^2.1.0"
oarepo-records-draft = { version = ">=5.0.0-alpha.22", allow-prereleases = true }
invenio-records-files = ">=1.2.1"
oarepo-ui = "^2.0"
oarepo-actions = "^1.0.5"

#[tool.poetry.plugins.oarepo_mapping_handlers]
#titled-term = "publications.mappings:titled_term"
#
[tool.poetry.plugins."invenio_config.module"]
publications = "{{ cookiecutter.package_name }}.config"
#
#[tool.poetry.plugins."invenio_search.mappings"]
#datasets = "publications.datasets.mappings"
#articles = "publications.articles.mappings"
#
#[tool.poetry.plugins."invenio_base.apps"]
#publications-dataset = "publications.datasets.ext:PublicationsDatasets"
#publications-article = "publications.articles.ext:PublicationsArticles"
#
#[tool.poetry.plugins."invenio_base.api_apps"]
#publications-dataset = "publications.datasets.ext:PublicationsDatasets"
#publications-article = "publications.articles.ext:PublicationsArticles"
#invenio_i18n = "invenio_i18n:InvenioI18N"
#
#[tool.poetry.plugins."flask.commands"]
#dataset-records = "publications.cli:dataset_records"
#
#[tool.poetry.plugins."invenio_jsonschemas.schemas"]
#publications-dataset = "publications.datasets.jsonschemas"
#publications-article = "publications.articles.jsonschemas"
#
#[tool.poetry.plugins."invenio_pidstore.minters"]
#publications-dataset = "publications.datasets.minters:dataset_minter"
#publications-article = "publications.articles.minters:article_minter"
#all-publications-datasets = "publications.datasets.minters:dataset_all_minter"
#all-publications-articles = "publications.articles.minters:article_all_minter"
#
#[tool.poetry.plugins."invenio_pidstore.fetchers"]
#publications-dataset = "publications.datasets.fetchers:dataset_fetcher"
#publications-article = "publications.articles.fetchers:article_fetcher"
#all-publications-datasets = "publications.datasets.fetchers:dataset_all_fetcher"
#all-publications-articles = "publications.articles.fetchers:article_all_fetcher"
#
#[tool.poetry.plugins."oarepo_iiif.openers"]
#image-opener = "publications.images:opener"
#
#[tool.poetry.plugins."oarepo_iiif.checks"]
#image-checker = "publications.images:checker"
#
#[tool.poetry.plugins."oarepo_iiif.identifier_makers"]
#image-checker = "publications.images:identifier_maker"
#
## TODO: mapping includes?
##[tool.poetry.plugins."oarepo_mapping_includes"]
##publications-articles = "publications.articles.included_mappings"
#
#[tool.poetry.plugins."invenio_i18n.translations"]
#publications = "publications"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"