[tool.poetry]
name = '{{ cookiecutter.project_shortname }}'
version = "1.0.0"
description = "{{ cookiecutter.description }}"
authors = [
    '{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>'
]


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

oarepo = "^3.3.51"
oarepo-micro-api = "^3.3.50"

oarepo-validate = "^1.5.2"
oarepo-mapping-includes = "^1.4.2"
oarepo-invenio-model = "^2.1.2"
oarepo-dc = "^2.1.0"
oarepo-records-draft = "^5.5.3"
invenio-records-files = "^1.2.1"
oarepo-ui = "^2.0.1"
oarepo-actions = "^1.0.6"
oarepo-s3 = "^1.2.0"
oarepo-references = "^1.11.2"
oarepo-taxonomies = "^2.5.4"
oarepo-multilingual = "^2.4.3"

s3-client-lib = "0.1.6"


[tool.poetry.plugins."invenio_config.module"]
records = "{{ cookiecutter.package_name }}.config"

[tool.poetry.plugins."invenio_search.mappings"]
records = "{{ cookiecutter.package_name }}.records.mappings"

[tool.poetry.plugins."invenio_base.apps"]
records = "{{ cookiecutter.package_name }}.records.ext:RecordsApp"

[tool.poetry.plugins."invenio_base.api_apps"]
records = "{{ cookiecutter.package_name }}.records.ext:RecordsApp"

[tool.poetry.plugins."flask.commands"]
{{ cookiecutter.cli_command }} = "{{ cookiecutter.package_name }}.cli:{{ cookiecutter.cli_command }}"

[tool.poetry.plugins."invenio_jsonschemas.schemas"]
records = "{{ cookiecutter.package_name }}.records.jsonschemas"

[tool.poetry.plugins."invenio_pidstore.minters"]
records = "{{ cookiecutter.package_name }}.records.minters:recid_minter_v2"
all-records = "{{ cookiecutter.package_name }}.records.minters:records_all_minter"

[tool.poetry.plugins."invenio_pidstore.fetchers"]
records = "{{ cookiecutter.package_name }}.records.fetchers:recid_fetcher_v2"
all-records = "{{ cookiecutter.package_name }}.records.fetchers:records_all_fetcher"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
